Ensure Secondary Page Nav is visible upon opening page

--- a/themes/navy/source/scss/main.scss
+++ b/themes/navy/source/scss/main.scss
@@ -3135,6 +3135,20 @@ img.qr-code{
             }
         }
     }
+    .snt-intro{
+        img{
+            width: 100px;
+        }
+        nav{
+            ul{
+                margin-bottom: 50px;
+                li{
+                    width: auto;
+                    margin: 0 20px;
+                }
+            }
+        }
+    }
     .using-snt{
         .items{
             .item{
@@ -3336,19 +3350,6 @@ img.qr-code{
     }
     .features-desktop img {
         max-width: 100%;
-    }
-    .snt-intro{
-        img{
-            width: 100px;
-        }
-        nav{
-            ul{
-                li{
-                    width: auto;
-                    margin: 0 20px;
-                }
-            }
-        }
     }
     .snt-basics{
         ul{
